@@ -7,6 +7,8 @@
    Rename Misc., Behaviour -> Miscellaneous.
  * src/plugindata.h:
    Clear PluginInfo fields in PLUGIN_INFO macro for future extensions.
+ * src/keyfile.c:
+   Group prefs in order for save_dialog_prefs().
 
 
 2007-08-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
